# Gorbagana-Trash-Royale

./: GAME-INFO.txt  README.md
Gorbagana Treasure Blitz/: .gitignore  build.js  index.html  package-lock.json  package.json  project.config  tsconfig.json  vite.config.js
Gorbagana Treasure Blitz/src/: main.ts
Gorbagana Treasure Blitz/src/scenes/: Game.ts
backend/: .gitignore  db.js  game.js  index.js  leaderboard.js  package-lock.json  package.json  solana.js
backend/solana-program/gorbagana-blitz/: Anchor.toml  Cargo.toml
backend/solana-program/gorbagana-blitz/programs/gorbagana-blitz/: Cargo.toml
backend/solana-program/gorbagana-blitz/programs/gorbagana-blitz/src/: lib.rs
backend/solana-program/gorbagana-blitz/tests/: gorbagana-blitz.ts
frontend/: .env.local  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/airdrop/: route.ts
frontend/app/api/waitlist/: route.ts
frontend/app/arena/: page.tsx
frontend/app/how-to-play/: page.tsx
frontend/app/leaderboard/: page.tsx
frontend/components/: battle-arena.tsx  defeat-screen.tsx  footer.tsx  game-lobby.tsx  landing-page.tsx  leaderboard-history.tsx  navigation.tsx  private-room.tsx  profile-page.tsx  providers.tsx  real-time-chat.tsx  sol-demo.tsx  spectator-mode.tsx  tournament-hub.tsx  victory-screen.tsx
frontend/contexts/: GameContext.tsx  TransactionHistoryContext.tsx  WalletContext.tsx
frontend/data/: waitlist.json
frontend/lib/: api.ts  game-ws.ts  socket.ts
frontend/styles/: globals.css
